[package]
name = "speconn"
version = "0.0.1"
edition = "2024"
description = "Rust runtime for Speconn RPC"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = ["client"]
client = ["dep:reqwest"]
