[package]
name = "speconn"
version = "0.0.1"
edition = "2024"
description = "Rust runtime for Speconn RPC"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
isahc = { version = "1", optional = true }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
isahc = ["dep:isahc"]
server = []
